--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,10 @@ dependencies:
   image_picker: ^0.8.7+1
   firebase_storage: ^11.1.0
   expandable_text: ^2.3.0
-
+  firebase_messaging: ^14.4.1
+  flutter_local_notifications: ^13.0.0
+  grock: ^0.2.7
+  path_provider: ^2.0.14
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
